@@ -29,3 +29,4 @@
 29. not able to reach topmost point
 30. adjust velocity of dragon ice ball
 31. we can hit magnet or superpower with bullets
+32. change y range of coins from 1 -5 to 1 - screen rows mid
